# MiniCode

./: .gitignore  README.md  pyproject.toml  requirements.txt
minicode/: __init__.py  agent.py  cli.py  edit_match.py  history.py  llm.py  logging_.py  permissions.py  prompts.py  server.py  tools.py  tui.py  workspace.py
tests/: test_edit_match.py  test_llm_integration.py  test_llm_logging.py  test_read_write.py  test_server.py
