[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minicode"
version = "0.1.0"
description = "Minimal agentic coding runtime"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pathspec>=0.11.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]
dev = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.25.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
minicode = "minicode.cli:main"

[tool.setuptools.packages.find]
where = ["."]
